[gd_scene load_steps=57 format=3 uid="uid://d3vl25p7aoan0"]

[ext_resource type="Script" uid="uid://c12rbiurnkfa8" path="res://Scripts/Normal/dialogue.gd" id="1_qn0no"]
[ext_resource type="PackedScene" uid="uid://t4mc0i620wdx" path="res://Scenes/Game/character.tscn" id="2_4xg4g"]
[ext_resource type="Texture2D" uid="uid://bfdcxwfnl2lhv" path="res://project assets/Assets only for a demo/Backgrounds/apartment-bed-bedroom-raining.png" id="2_qn0no"]
[ext_resource type="Texture2D" uid="uid://d00kk7gokp6vg" path="res://project assets/Assets only for a demo/Sprites/NE.png" id="3_g12sc"]
[ext_resource type="PackedScene" uid="uid://xu5ilh4owv26" path="res://Scenes/Game/dialogue_ui.tscn" id="3_qtnsr"]
[ext_resource type="Texture2D" uid="uid://meoj3jp7lrnl" path="res://project assets/Assets only for a demo/Sprites/NW.png" id="4_ryofh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ld8m1"]
atlas = ExtResource("3_g12sc")
region = Rect2(715, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_udbaf"]
atlas = ExtResource("3_g12sc")
region = Rect2(650, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sd7k"]
atlas = ExtResource("3_g12sc")
region = Rect2(585, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcrcx"]
atlas = ExtResource("3_g12sc")
region = Rect2(520, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6wv5"]
atlas = ExtResource("3_g12sc")
region = Rect2(455, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2x0a"]
atlas = ExtResource("3_g12sc")
region = Rect2(390, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3btdi"]
atlas = ExtResource("3_g12sc")
region = Rect2(325, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_olhil"]
atlas = ExtResource("3_g12sc")
region = Rect2(260, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q1ld"]
atlas = ExtResource("3_g12sc")
region = Rect2(195, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug32o"]
atlas = ExtResource("3_g12sc")
region = Rect2(130, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya57u"]
atlas = ExtResource("3_g12sc")
region = Rect2(65, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld0ar"]
atlas = ExtResource("3_g12sc")
region = Rect2(0, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g12sc"]
atlas = ExtResource("3_g12sc")
region = Rect2(0, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryofh"]
atlas = ExtResource("3_g12sc")
region = Rect2(65, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr71n"]
atlas = ExtResource("3_g12sc")
region = Rect2(130, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex4pa"]
atlas = ExtResource("3_g12sc")
region = Rect2(195, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_puyuy"]
atlas = ExtResource("3_g12sc")
region = Rect2(260, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3b3p"]
atlas = ExtResource("3_g12sc")
region = Rect2(325, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvmqo"]
atlas = ExtResource("3_g12sc")
region = Rect2(390, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c45on"]
atlas = ExtResource("3_g12sc")
region = Rect2(455, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm14a"]
atlas = ExtResource("3_g12sc")
region = Rect2(520, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcqpm"]
atlas = ExtResource("3_g12sc")
region = Rect2(585, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hys0"]
atlas = ExtResource("3_g12sc")
region = Rect2(650, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sqqv"]
atlas = ExtResource("3_g12sc")
region = Rect2(715, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0mc8"]
atlas = ExtResource("3_g12sc")
region = Rect2(715, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_13fal"]
atlas = ExtResource("3_g12sc")
region = Rect2(650, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pynt6"]
atlas = ExtResource("3_g12sc")
region = Rect2(585, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kttpl"]
atlas = ExtResource("3_g12sc")
region = Rect2(520, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1gjh"]
atlas = ExtResource("3_g12sc")
region = Rect2(455, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u5i8"]
atlas = ExtResource("3_g12sc")
region = Rect2(390, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f0d7"]
atlas = ExtResource("3_g12sc")
region = Rect2(325, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2bmg"]
atlas = ExtResource("3_g12sc")
region = Rect2(260, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnbvd"]
atlas = ExtResource("3_g12sc")
region = Rect2(195, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldu1y"]
atlas = ExtResource("3_g12sc")
region = Rect2(130, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm4di"]
atlas = ExtResource("3_g12sc")
region = Rect2(65, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln6ja"]
atlas = ExtResource("3_g12sc")
region = Rect2(0, 0, 65, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_jr71n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld8m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udbaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sd7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcrcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6wv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2x0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3btdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olhil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q1ld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug32o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya57u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld0ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g12sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryofh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr71n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex4pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puyuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3b3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvmqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c45on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm14a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcqpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hys0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sqqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0mc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13fal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pynt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kttpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1gjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u5i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f0d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2bmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnbvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldu1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm4di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6ja")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gepna"]
atlas = ExtResource("4_ryofh")
region = Rect2(0, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ms0"]
atlas = ExtResource("4_ryofh")
region = Rect2(65, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rya6l"]
atlas = ExtResource("4_ryofh")
region = Rect2(130, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pbhr"]
atlas = ExtResource("4_ryofh")
region = Rect2(195, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7mpb"]
atlas = ExtResource("4_ryofh")
region = Rect2(260, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i44bu"]
atlas = ExtResource("4_ryofh")
region = Rect2(325, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vt2s"]
atlas = ExtResource("4_ryofh")
region = Rect2(390, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbqb3"]
atlas = ExtResource("4_ryofh")
region = Rect2(455, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgd52"]
atlas = ExtResource("4_ryofh")
region = Rect2(520, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o8s7"]
atlas = ExtResource("4_ryofh")
region = Rect2(585, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4mtw"]
atlas = ExtResource("4_ryofh")
region = Rect2(650, 0, 65, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxutr"]
atlas = ExtResource("4_ryofh")
region = Rect2(715, 0, 65, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_ex4pa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gepna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ms0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rya6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pbhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7mpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i44bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vt2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbqb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgd52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o8s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4mtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxutr")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Dialogue" type="Node2D"]
position = Vector2(431, 334)
script = ExtResource("1_qn0no")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qn0no")
expand_mode = 1

[node name="BackgroundEffect1" type="AnimatedSprite2D" parent="CanvasLayer/Background"]
position = Vector2(497, 420)
sprite_frames = SubResource("SpriteFrames_jr71n")
autoplay = "default"
frame_progress = 0.637661

[node name="BackgroundEffect2" type="AnimatedSprite2D" parent="CanvasLayer/Background"]
position = Vector2(573, 424)
sprite_frames = SubResource("SpriteFrames_ex4pa")
autoplay = "default"
frame_progress = 0.0545922

[node name="BackgroundEffect3" type="AnimatedSprite2D" parent="CanvasLayer/Background"]
position = Vector2(447, 363)
sprite_frames = SubResource("SpriteFrames_ex4pa")
autoplay = "default"
frame_progress = 0.987109

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 0
offset_left = -317.0
offset_top = -60.0
offset_right = -277.0
offset_bottom = -20.0

[node name="CharacterSprite" parent="CanvasLayer2/Control" instance=ExtResource("2_4xg4g")]
unique_name_in_owner = true
position = Vector2(507, 455)

[node name="DialogueUi" parent="CanvasLayer2" instance=ExtResource("3_qtnsr")]
unique_name_in_owner = true
offset_top = 3.0
offset_bottom = 3.0
